--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,68 @@
 * {
-  margin: 3px 0 3px 0;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(194, 203, 211);
 }
 
 .border {
   border: solid 1px black;
 }
 
+.rounded {
+  border-radius: 20px;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.container {
+  margin-top: 10vh;
+  width: 50vw;
+  padding: 1rem;
+  background-color: white;
+  box-shadow: 2px 2px 3px 2px rgba(48, 43, 43, 0.2);
+}
+
+table {
+  width: 40vw;
+  padding: 1rem;
+}
+
+td {
+  padding: 1rem;
+  text-align: center;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
 .title {
-  display: grid;
-  flex-direction: column;
-  justify-content: center;
+  width: 30vw;
+  text-align: center;
+  margin: 15px auto;
 }
 
-.book-ul {
-  display: block;
-  width: 290px;
-  padding: 0 0 0 24rem;
-  margin: 5px;
-  margin-top: 1rem;
+.form-in {
+  width: 30vw;
+  padding: 1em;
 }
 
-.book-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 290px;
-  padding: 0 0 0 20.5rem;
+.form-control {
+  width: 96%;
+  padding: 0.5em;
+  margin: 10px 0;
+}
+
+.btn {
+  width: 100%;
+  padding: 0.5em;
+}
+
+.btn-r {
+  border-radius: 3px;
 }
